--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -17,8 +17,12 @@
 <body>
 
 <!-- Navigation Bar -->
-<div th:replace="~{fragments/header :: menu}"></div>
-<div th:replace="~{fragments/footer :: footer-1}"></div>
+<section class="navbar navbar-expand-lg navbar-light bg-light"  th:fragment="footer-1">
+   <h2>footer1
+   </h2>
+</section>
+
+<!-- Bootstrap JS and Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
