--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,28 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Navigation Bar</title>
+  <title>Professional Footer</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <style>
-    /* Custom styles (optional) */
-    .navbar-brand {
-      font-weight: bold;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="footer-styles.css">
 </head>
 <body>
 
-<!-- Navigation Bar -->
-<section class="navbar navbar-expand-lg navbar-light bg-light"  th:fragment="footer-1">
-   <h2>footer1
-   </h2>
-</section>
+<!-- Footer Section -->
+<footer class="footer bg-dark text-light">
+  <div class="container py-5">
+    <div class="row">
+      <!-- About Section -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <h5 class="text-head">BGD e-GOV CIRT</h5>
+        <p>Bangladesh Computer Council, E-14/X,<br> ICT Tower, Agargaon, Dhaka-1207, Bangladesh.<br>
+           Phone: +880255007183 <br> Email: info@cirt.gov.bd</p>
+      </div>
+      <!-- Navigation Links -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <h5 class="text-head">Navigation</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-light">Home</a></li>
+          <li><a href="#" class="text-light">About Us</a></li>
+          <li><a href="#" class="text-light">Discover</a></li>
+          <li><a href="#" class="text-light">Services</a></li>
+        </ul>
+      </div>
+      <!-- Additional Links -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <h5 class="text-head">Resources</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-light">Privacy Policy</a></li>
+          <li><a href="#" class="text-light">Terms & Conditions</a></li>
+          <li><a href="#" class="text-light">Alert & Advisories</a></li>
+          <li><a href="#" class="text-light">News & Events</a></li>
+        </ul>
+      </div>
+      <!-- Social Media Icons Section -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <h5 class="text-head">Follow Us</h5>
+        <div class="social-icons mb-3">
+          <a href="https://www.facebook.com/bgdegovcirt" class="me-3" target="_blank">
+            <img src="/images/facebook1.png" alt="Facebook" width="24" height="24">
+          </a>
+          <a href="https://x.com/bgdegovcirt" class="me-3" target="_blank">
+            <img src="/images/twitter.png" alt="Twitter" width="24" height="24">
+          </a>
+          <a href="https://bd.linkedin.com/company/bgdegovcirt" class="me-3" target="_blank">
+            <img src="/images/linkedin1.png" alt="Linkedin" width="24" height="24">
+          </a>
+        </div>
+        <button class="btn btn-pink text-light">Contact Us</button>
+      </div>
+    </div>
+    <div class="text-center mt-4 border-top pt-3">
+      <p>&copy; 2025 All Rights Reserved.</p>
+    </div>
+  </div>
+</footer>
 
-<!-- Bootstrap JS and Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+<!-- FontAwesome for Icons -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
