--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,18 +6,13 @@
   <title>Responsive Navigation Bar</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <style>
-    /* Custom styles (optional) */
-    .navbar-brand {
-      font-weight: bold;
-    }
-  </style>
 </head>
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light"  th:fragment="menu">
+<nav class="navbar navbar-expand-lg navbar-light" th:fragment="menu">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">BrandName</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,14 +27,44 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="discoverDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Discover
           </a>
-          <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+          <ul class="dropdown-menu" aria-labelledby="discoverDropdown">
             <li><a class="dropdown-item" href="/who-we-are">Who We Are</a></li>
             <li><a class="dropdown-item" href="/what-we-do">What We Do</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/mission-vision">Mission & Vision</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Services
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+            <li><a class="dropdown-item" href="/talent-skill-development">Talent & Skill Development</a></li>
+            <li><a class="dropdown-item" href="/training-it-professionals">Training for IT Professionals</a></li>
+            <li><a class="dropdown-item" href="/vapt">VAPT</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Alert & Advisories
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="alertsDropdown">
+            <li><a class="dropdown-item" href="/alerts">Alerts</a></li>
+            <li><a class="dropdown-item" href="/advisories">Advisories</a></li>
+            <li><a class="dropdown-item" href="/bulletin">Bulletin</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="newsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            News & Events
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="newsDropdown">
+            <li><a class="dropdown-item" href="/news">News</a></li>
+            <li><a class="dropdown-item" href="/events">Events</a></li>
+            <li><a class="dropdown-item" href="/notices">Notices</a></li>
           </ul>
         </li>
         <li class="nav-item">
