--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light" th:fragment="menu">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">BrandName</a>
+    <a class="navbar-brand" href="/"><img th:src="@{/images/BCC-Main-Logo.png}" height="50"/><img th:src="@{/images/CIRT-Main-Logo.png}" height="50"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,9 +22,6 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="discoverDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
