admin-panel work till 6th jan 2025, 1:54pm

--- a/src/main/resources/templates/admin/admin-home.html
+++ b/src/main/resources/templates/admin/admin-home.html
@@ -22,6 +22,8 @@
 
 <!-- Navigation Bar -->
 <div th:replace="~{fragments/header :: menu}"></div>
+<div th:replace="~{fragments/admin-header :: menu}"></div>
+
 <div th:replace="~{fragments/footer :: footer}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
