--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -14,25 +14,16 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light" th:fragment="menu">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img th:src="@{/assets/images/BCC-Main-Logo.png}" height="50"/><img th:src="@{/assets/images/CIRT-Main-Logo.png}" height="50"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/">Home</a>
+          <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="discoverDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Discover
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="discoverDropdown">
-            <li><a class="dropdown-item" href="/who-we-are">Who We Are</a></li>
-            <li><a class="dropdown-item" href="/what-we-do">What We Do</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/mission-vision">Mission & Vision</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/admin/media">Media</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
