--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -46,13 +46,13 @@
         <h5 class="text-head">Follow Us</h5>
         <div class="social-icons mb-3">
           <a href="https://www.facebook.com/bgdegovcirt" class="me-3" target="_blank">
-            <img src="/images/facebook1.png" alt="Facebook" width="24" height="24">
+            <img src="/assets/images/facebook1.png" alt="Facebook" width="24" height="24">
           </a>
           <a href="https://x.com/bgdegovcirt" class="me-3" target="_blank">
-            <img src="/images/twitter.png" alt="Twitter" width="24" height="24">
+            <img src="/assets/images/twitter.png" alt="Twitter" width="24" height="24">
           </a>
           <a href="https://bd.linkedin.com/company/bgdegovcirt" class="me-3" target="_blank">
-            <img src="/images/linkedin1.png" alt="Linkedin" width="24" height="24">
+            <img src="/assets/images/linkedin1.png" alt="Linkedin" width="24" height="24">
           </a>
         </div>
         <button class="btn btn-pink text-light">Contact Us</button>
