admin-panel work till 6th jan 2025, 1:54pm

--- a/src/main/resources/templates/admin/admin-media.html
+++ b/src/main/resources/templates/admin/admin-media.html
@@ -38,7 +38,7 @@
       <td th:text="${media.getFileName()}"></td>
       <td th:text="${media.getCreatedAt()}">Smith</td>
       <td>  </td>
-      <td> Delete icon </td>
+      <td><img class="media-icon-delete" src="/assets/images/delete.png" alt="delete-btn"></td>
     </tr>
   </table>
 </div>
