--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -18,8 +18,12 @@
       <!-- About Section -->
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="text-head">BGD e-GOV CIRT</h5>
-        <p>Bangladesh Computer Council, E-14/X,<br> ICT Tower, Agargaon, Dhaka-1207, Bangladesh.<br>
-           Phone: +880255007183 <br> Email: info@cirt.gov.bd</p>
+        <p>
+          Bangladesh Computer Council, E-14/X,<br>
+          ICT Tower, Agargaon, Dhaka-1207, Bangladesh.<br>
+          <img src="/assets/images/phone1.png" alt="Phone" width="20" height="20" class="me-2">Phone: +880255007183 <br>
+          <img src="/assets/images/email1.png" alt="Email" width="20" height="20" class="me-2">Email: info@cirt.gov.bd
+        </p>
       </div>
       <!-- Navigation Links -->
       <div class="col-lg-3 col-md-6 mb-4">
@@ -63,8 +67,6 @@
     </div>
   </div>
 </footer> 
-
-
 
 <!-- FontAwesome for Icons -->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
