--- a/src/main/resources/templates/basic/what.html
+++ b/src/main/resources/templates/basic/what.html
@@ -3,29 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Navigation Bar</title>
+  <title>What We Do | BGD e-GOV CIRT</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" th:href="@{/css/header-styles.css}">
-  <link rel="stylesheet" th:href="@{/css/footer-styles.css}">
-
-
-  <style>
-    /* Custom styles (optional) */
-    .navbar-brand {
-      font-weight: bold;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
+  <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <div th:replace="~{fragments/header :: menu}"></div>
+    <!-- Page Header -->
+    <header class="bg-light py-5 text-center">
+      <div class="container">
+          <h4 class="display-5">What We Do</h4>
+          <p class="lead">Get informed about the activities of BGD e-GOV CIRT. Our functionality & footprints as a Government entity. </p>
+      </div>
+    </header>
 
-<!-- Navigation Bar -->
-<div th:replace="~{fragments/header :: menu}"></div>
-<div th:replace="~{fragments/footer :: footer-1}"></div>
+  <!-- Post List -->
+  <div class="container my-5">
+      <div class="row">
+          
+      </div>
+  </div>
+  <div th:replace="~{fragments/footer :: footer}"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- FontAwesome for Icons -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
