--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -46,22 +46,23 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Alert & Advisories
+            Advisories
           </a>
           <ul class="dropdown-menu" aria-labelledby="alertsDropdown">
             <li><a class="dropdown-item" href="/alerts">Alerts</a></li>
             <li><a class="dropdown-item" href="/advisories">Advisories</a></li>
-            <li><a class="dropdown-item" href="/bulletin">Bulletin</a></li>
+            <li><a class="dropdown-item" href="/bulletins">Bulletins</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="newsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            News & Events
+            Notices
           </a>
           <ul class="dropdown-menu" aria-labelledby="newsDropdown">
+            <li><a class="dropdown-item" href="/notices">Notices</a></li>
+            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/news">News</a></li>
             <li><a class="dropdown-item" href="/events">Events</a></li>
-            <li><a class="dropdown-item" href="/notices">Notices</a></li>
           </ul>
         </li>
         <li class="nav-item">
