--- a/src/main/resources/templates/post/post-list.html
+++ b/src/main/resources/templates/post/post-list.html
@@ -3,73 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title th:text="${t}">Professional Footer</title>
+  <title th:text="${t}">Page Title</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
-  <link rel="stylesheet" href="footer-styles.css">
+  <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
 </head>
 <body>
     <!-- Navigation Bar -->
     <div th:replace="~{fragments/header :: menu}"></div>
-    <h1 th:text="'Articles related to ' + ${category}"></h1>
-<!-- Footer Section -->
-<footer class="footer bg-dark text-light">
-  <div class="container py-5">
-    <div class="row"> 
-      <!-- About Section -->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <h5 class="text-head">BGD e-GOV CIRT</h5>
-        <p>
-          Bangladesh Computer Council, E-14/X,<br>
-          ICT Tower, Agargaon, Dhaka-1207, Bangladesh.<br>
-          <img src="/assets/images/phone1.png" alt="Phone" width="20" height="20" class="me-2">Phone: +880255007183 <br>
-          <img src="/assets/images/email1.png" alt="Email" width="20" height="20" class="me-2">Email: info@cirt.gov.bd
-        </p>
+    <!-- Page Header -->
+    <header class="bg-light py-5 text-center">
+      <div class="container">
+          <h1 class="display-4" th:text="${category} + ' by BGD e-GOV CIRT'">Posts</h1>
+          <p class="lead">Explore the latest articles and tips for certification success.</p>
       </div>
-      <!-- Navigation Links -->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <h5 class="text-head">Navigation</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Home</a></li>
-          <li><a href="#" class="text-light">About Us</a></li>
-          <li><a href="#" class="text-light">Discover</a></li>
-          <li><a href="#" class="text-light">Services</a></li>
-        </ul>
-      </div>
-      <!-- Additional Links -->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <h5 class="text-head">Resources</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Privacy Policy</a></li>
-          <li><a href="#" class="text-light">Terms & Conditions</a></li>
-          <li><a href="#" class="text-light">Alert & Advisories</a></li>
-          <li><a href="#" class="text-light">News & Events</a></li>
-        </ul>
-      </div>
-      <!-- Social Media Icons Section -->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <h5 class="text-head">Follow Us</h5>
-        <div class="social-icons mb-3">
-          <a href="https://www.facebook.com/bgdegovcirt" class="me-3" target="_blank">
-            <img src="/assets/images/facebook1.png" alt="Facebook" width="24" height="24">
-          </a>
-          <a href="https://x.com/bgdegovcirt" class="me-3" target="_blank">
-            <img src="/assets/images/twitter.png" alt="Twitter" width="24" height="24">
-          </a>
-          <a href="https://bd.linkedin.com/company/bgdegovcirt" class="me-3" target="_blank">
-            <img src="/assets/images/linkedin1.png" alt="Linkedin" width="24" height="24">
-          </a>
+    </header>
+
+  <!-- Post List -->
+  <div class="container my-5">
+      <div class="row">
+          <!-- Post Item -->
+          <div class="col-md-6 col-lg-4 mb-4" th:each="post : ${postList}">
+              <div class="card h-100">
+                  <img th:src="'/assets/images/thumbnails/' + ${category} + '.png'" class="card-img-top" alt="Post Image">
+                  <div class="card-body">
+                      <a th:href="'/'+${post.getCategory()}+'/'+${post.getUri()}" class="card-title"><h4 th:text="${post.getTitle()}">Post Title</h4></a>
+                      <p class="card-text">Learn about the top AWS certifications to boost your career in cloud computing.</p>
+                      <a th:href="'/'+${post.getCategory()}+'/'+${post.getUri()}" class="btn btn-success">Read More</a>
+                  </div>
+              </div>
+          </div>
         </div>
-        <button class="btn btn-pink text-light">Contact Us</button>
-      </div>
-    </div>
-    <div class="text-center mt-4 border-top pt-3">
-      <p>&copy; 2025 All Rights Reserved.</p>
-    </div>
   </div>
-</footer> 
+  <div th:replace="~{fragments/footer :: footer}"></div>
 
 <!-- FontAwesome for Icons -->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
