--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -30,18 +30,18 @@
         <h5 class="text-head">Navigation</h5>
         <ul class="list-unstyled">
           <li><a href="#" class="text-light">Home</a></li>
-          <li><a href="#" class="text-light">About Us</a></li>
           <li><a href="#" class="text-light">Discover</a></li>
-          <li><a href="#" class="text-light">Services</a></li>
+          <li><a href="#" class="text-light">Contact</a></li>
+          <li><a href="#" class="text-light">Advisories</a></li>
         </ul>
       </div>
       <!-- Additional Links -->
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="text-head">Resources</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Privacy Policy</a></li>
-          <li><a href="#" class="text-light">Terms & Conditions</a></li>
-          <li><a href="#" class="text-light">Alert & Advisories</a></li>
+          <li><a href="#" class="text-light">Advisories</a></li>
+          <li><a href="#" class="text-light">Notice</a></li>
+          <li><a href="#" class="text-light">Contact</a></li>
           <li><a href="#" class="text-light">News & Events</a></li>
         </ul>
       </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="text-center mt-4 border-top pt-3">
-      <p>&copy; 2025 All Rights Reserved.</p>
+      <p>&copy; 2025 BGD e-GOV CIRT, All Rights Reserved.</p>
     </div>
   </div>
 </footer> 
