--- a/src/main/resources/templates/basic/mis-vis.html
+++ b/src/main/resources/templates/basic/mis-vis.html
@@ -3,30 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mission & Vision | BGD e-GOV CIRT</title>
-  <!-- Bootstrap CSS -->
+  <title>Mission & Vision</title>
+  <!-- Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
+  <link rel="stylesheet" th:href="@{/assets/css/basicpages.css}">
 </head>
 <body>
     <!-- Navigation Bar -->
     <div th:replace="~{fragments/header :: menu}"></div>
+
     <!-- Page Header -->
-    <header class="bg-light py-5 text-center">
-      <div class="container">
-          <h4 class="display-5">Mission & Vision</h4>
-          <p class="lead">Get informed about the activities of BGD e-GOV CIRT. Our functionality & footprints as a Government entity. </p>
-      </div>
+    <header>
+        <div class="container">
+            <h1>Our Mission & Vision</h1>
+            <p>Guiding principles and aspirations for a brighter future.</p>
+        </div>
     </header>
 
-  <!-- Post List -->
-  <div class="container my-5">
-      <div class="row">
-          
-      </div>
-  </div>
+    <!-- Main Content -->
+    <div class="content-container my-5">
+        <h2>Mission</h2>
+        <p>To provide unparalleled digital solutions that empower growth and enhance security.</p>
+
+        <h2>Vision</h2>
+        <p>To be the global leader in driving digital transformation and innovation with integrity and excellence.</p>
+    </div>
   <div th:replace="~{fragments/footer :: footer}"></div>
 
 <!-- FontAwesome for Icons -->
