admin-post form works.

--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -25,8 +25,14 @@
         <li class="custom-nav-item">
           <a class="custom-nav-link" aria-current="page" href="/admin/media">Media</a>
         </li>
-        <li class="custom-nav-item">
-          <a class="custom-nav-link" aria-current="page" href="/admin/post">Post</a>
+        <li class="custom-nav-item dropdown">
+          <a class="custom-nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Post
+          </a>
+          <ul class="custom-dropdown-menu" aria-labelledby="servicesDropdown">
+            <li><a class="custom-dropdown-item" href="/admin/post">Add New Post</a></li>
+            <li><a class="custom-dropdown-item" href="/admin/posts">View All Posts</a></li>
+          </ul>
         </li>
         <li class="custom-nav-item dropdown">
           <a class="custom-nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
