--- a/src/main/resources/templates/post/post-list.html
+++ b/src/main/resources/templates/post/post-list.html
@@ -18,7 +18,7 @@
     <!-- Page Header -->
     <header>
       <div class="container">
-          <h1 th:text="${category} + ' by BGD e-GOV CIRT'">Posts</h1>
+          <h1 th:text="${categoryCap} + ' by BGD e-GOV CIRT'">Posts</h1>
           <p>Explore the latest articles and tips for certification success.</p>
       </div>
     </header>
@@ -42,8 +42,8 @@
         </div>
         <!-- Pagination -->
         <div class="pagination text-center mt-4">
-            <a th:href="@{/posts(page=${currentPage - 1})}" th:if="${currentPage > 0}">Previous</a>
-            <a th:href="@{/posts(page=${currentPage + 1})}" th:if="${currentPage < totalPage - 1}">Next</a>
+            <a th:href="'/' + ${category} + '?page='+ ${currentPage - 1}" th:if="${currentPage > 0}">Previous</a>
+            <a th:href="'/' + ${category} + '?page='+ ${currentPage + 1}" th:if="${currentPage < totalPage - 1}">Next</a>
         </div>
     </div>
 
